--- a/src/config/.env.development
+++ b/src/config/.env.development
@@ -1,3 +1,3 @@
 PORT=8001
-MONGO_URI=mongodb+srv://admin:admin@ankitcluster.esirbfj.mongodb.net/scalableChatApp?retryWrites=true&w=majority
+MONGO_URI=
 JWT_SECRET=xcfgvhbjnkmldfghjk34567890cvbnjkl
